Pull up following revision(s) (requested by kardel in ticket #1385): 	sys/dev/pci/if_wm.c: revision 1.497 PR kern/52039: use same safeguard as for the 82578